force-app/main/default/objects/UnifiedContactPointAddress__dlm/fields/rel_1696575106597_end__c.field-meta.xml
<CustomField>
    <fullName>rel_1696575106597_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UnifiedContactPointAddress_ssot_Part_rel</label>
    <referenceTo>UnifiedIndividual__dlm</referenceTo>
    <relationshipLabel>UnifiedContactPointAddress_ssot_Part_rel</relationshipLabel>
    <relationshipName>rel_1696575106597_end</relationshipName>
    <type>Lookup</type>
</CustomField>