force-app/main/default/objects/UnifiedContactPointAddress__dlm/fields/ssot__GeoLatitude__c.field-meta.xml
<CustomField>
    <fullName>ssot__GeoLatitude__c</fullName>
    <label>Geo Latitude</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>GeoLatitude</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>