force-app/main/default/objects/UnifiedContactPointAddress__dlm/fields/ssot__GeoLongitude__c.field-meta.xml
<CustomField>
    <fullName>ssot__GeoLongitude__c</fullName>
    <label>Geo Longitude</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>GeoLongitude</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>