force-app/main/default/objects/UnifiedContactPointAddress__dlm/fields/ssot__PostalCodeId__c.field-meta.xml
<CustomField>
    <fullName>ssot__PostalCodeId__c</fullName>
    <label>Postal Code</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PostalCodeId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>